# sparseSystems

./: CMakeLists.txt  main.cpp
InputData/: mesh1_input.txt  meshConfig.json  sparseConfig.json
src/include/json/: jsoncpp.cpp
src/mesh/: Create_Web.cpp  Functions.cpp  Functions.h  meshCreator.cpp
src/sparseMethods/: AdjacencyMethods.cpp  AdjacencyMethods.h  FIleMethods.cpp  FileMethods.h  InitialNodeMethods.cpp  InitialNodeMethods.h  MatrixOptimizationMethods.cpp  MatrixOptimizationMethods.h  RootLevelMethods.cpp  RootLevelMethods.h
